--- a/src/www/index.html
+++ b/src/www/index.html
@@ -25,7 +25,7 @@
 
     <table data-bind='visible: clients().length > 0' id="statusTable"  class="display" cellspacing="0" width="100%">
         <thead>
-            <tr>
+            <tr align="center">
                 <th>Name</th>
                 <th>CPU %</th>
                 <th>Memory %</th>
@@ -34,7 +34,7 @@
             </tr>
         </thead>
         <tbody data-bind='foreach: clients'>
-            <tr>
+            <tr align="center">
               <td data-bind='text: name'></td>
               <td data-bind='text: cpu'></td>
               <td data-bind='text: memoryLoad'></td>
